--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nodemon": "^3.0.1",
     "serverless-http": "^3.2.0",
     "serverless-offline": "^12.0.4",
+    "serverless-plugin-common-excludes": "^4.0.0",
     "serverless-plugin-typescript-express": "^1.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
